// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Navigation/Tab Simple Tab 1`] = `
Array [
  <div
    className="sc-iBzEeX cngyM"
  >
    <div
      className="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-71"
    >
      <div
        className="MuiTabs-scrollable"
        style={
          Object {
            "height": 99,
            "overflow": "scroll",
            "position": "absolute",
            "top": -9999,
            "width": 99,
          }
        }
      />
      <div
        className="MuiTabs-scroller MuiTabs-scrollable"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-72 MuiTab-textColorInherit"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M10.006 3c-2.762 0-5 2.238-5 5s2.238 5 5 5c2.76 0 5-2.238 5-5s-2.24-5-5-5m0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3"
                      />
                      <path
                        className="icon-color"
                        d="M3.427 3.65C1.936 4.535 1 6.18 1 8c0 1.821.937 3.467 2.428 4.35.475.281 1.088.124 1.37-.35.281-.476.124-1.09-.351-1.37C3.565 10.106 3 9.114 3 8s.564-2.106 1.448-2.63c.475-.283.631-.896.35-1.371-.283-.475-.896-.631-1.371-.35z"
                        fillRule="nonzero"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Assets
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-73 MuiTab-textColorInherit"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M12.984 11.608l1.302-1.322c.384-.384 1.024-.384 1.408 0 .384.384.384 1.024 0 1.408l-2.966 3.008c-.191.191-.448.298-.704.298-.256 0-.511-.107-.704-.298l-3.03-3.008c-.426-.427-.383-1.152.13-1.515.404-.298.98-.213 1.322.15l1.13 1.108.129.022V1.982c0-.555.447-.982.98-.982.577 0 1.004.448 1.004.982v9.626zM4.984 4.392l1.302 1.322c.384.384 1.024.384 1.408 0 .384-.384.384-1.024 0-1.408L4.728 1.298C4.537 1.107 4.28 1 4.024 1c-.256 0-.511.107-.704.298L.29 4.306c-.426.427-.383 1.152.13 1.515.404.298.98.213 1.322-.15l1.13-1.108.129-.022V14.018c0 .555.447.982.98.982.577 0 1.004-.448 1.004-.982V4.392z"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Transactions
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-74 MuiTab-textColorInherit Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <g
                        className="icon-color"
                      >
                        <path
                          d="M1 0h4c.552 0 1 .448 1 1v4c0 .552-.448 1-1 1H1c-.552 0-1-.448-1-1V1c0-.552.448-1 1-1zm1 2v2h2V2H2zM9 8h4c.552 0 1 .448 1 1v4c0 .552-.448 1-1 1H9c-.552 0-1-.448-1-1V9c0-.552.448-1 1-1zm1 2v2h2v-2h-2zM11 6c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm0-1.9c-.607 0-1.1-.492-1.1-1.1 0-.608.493-1.1 1.1-1.1.608 0 1.1.492 1.1 1.1 0 .608-.492 1.1-1.1 1.1z"
                          fillRule="nonzero"
                          transform="translate(1 1)"
                        />
                        <path
                          d="M1.641 10.999L.281 9.638c-.375-.373-.375-.984 0-1.357.373-.374.984-.374 1.358 0l1.36 1.36 1.361-1.36c.373-.374.984-.374 1.357 0 .375.373.375.984 0 1.357l-1.36 1.36 1.36 1.362c.375.374.375.984 0 1.358-.372.374-.983.374-1.356 0l-1.362-1.362-1.361 1.362c-.374.374-.984.374-1.358 0-.373-.374-.373-.984 0-1.358l1.361-1.361z"
                          transform="translate(1 1)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE ezHljt"
                  color="primary"
                  size="sm"
                >
                  Apps
                </p>
              </div>
            </span>
            <span
              className="PrivateTabIndicator-root-75 PrivateTabIndicator-colorSecondary-77 MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-79 MuiTab-textColorInherit Mui-disabled Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
                        fillRule="nonzero"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Address Book
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-80 MuiTab-textColorInherit"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div>
                custom
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "3",
]
`;

exports[`Storyshots Navigation/Tab Tab Contained 1`] = `
Array [
  <div
    className="sc-iBzEeX caauxv"
  >
    <div
      className="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-81"
    >
      <div
        className="MuiTabs-scrollable"
        style={
          Object {
            "height": 99,
            "overflow": "scroll",
            "position": "absolute",
            "top": -9999,
            "width": 99,
          }
        }
      />
      <div
        className="MuiTabs-scroller MuiTabs-scrollable"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-82 MuiTab-textColorInherit"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M10.006 3c-2.762 0-5 2.238-5 5s2.238 5 5 5c2.76 0 5-2.238 5-5s-2.24-5-5-5m0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3"
                      />
                      <path
                        className="icon-color"
                        d="M3.427 3.65C1.936 4.535 1 6.18 1 8c0 1.821.937 3.467 2.428 4.35.475.281 1.088.124 1.37-.35.281-.476.124-1.09-.351-1.37C3.565 10.106 3 9.114 3 8s.564-2.106 1.448-2.63c.475-.283.631-.896.35-1.371-.283-.475-.896-.631-1.371-.35z"
                        fillRule="nonzero"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Assets
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-83 MuiTab-textColorInherit"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M12.984 11.608l1.302-1.322c.384-.384 1.024-.384 1.408 0 .384.384.384 1.024 0 1.408l-2.966 3.008c-.191.191-.448.298-.704.298-.256 0-.511-.107-.704-.298l-3.03-3.008c-.426-.427-.383-1.152.13-1.515.404-.298.98-.213 1.322.15l1.13 1.108.129.022V1.982c0-.555.447-.982.98-.982.577 0 1.004.448 1.004.982v9.626zM4.984 4.392l1.302 1.322c.384.384 1.024.384 1.408 0 .384-.384.384-1.024 0-1.408L4.728 1.298C4.537 1.107 4.28 1 4.024 1c-.256 0-.511.107-.704.298L.29 4.306c-.426.427-.383 1.152.13 1.515.404.298.98.213 1.322-.15l1.13-1.108.129-.022V14.018c0 .555.447.982.98.982.577 0 1.004-.448 1.004-.982V4.392z"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Transactions
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-84 MuiTab-textColorInherit Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <g
                        className="icon-color"
                      >
                        <path
                          d="M1 0h4c.552 0 1 .448 1 1v4c0 .552-.448 1-1 1H1c-.552 0-1-.448-1-1V1c0-.552.448-1 1-1zm1 2v2h2V2H2zM9 8h4c.552 0 1 .448 1 1v4c0 .552-.448 1-1 1H9c-.552 0-1-.448-1-1V9c0-.552.448-1 1-1zm1 2v2h2v-2h-2zM11 6c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm0-1.9c-.607 0-1.1-.492-1.1-1.1 0-.608.493-1.1 1.1-1.1.608 0 1.1.492 1.1 1.1 0 .608-.492 1.1-1.1 1.1z"
                          fillRule="nonzero"
                          transform="translate(1 1)"
                        />
                        <path
                          d="M1.641 10.999L.281 9.638c-.375-.373-.375-.984 0-1.357.373-.374.984-.374 1.358 0l1.36 1.36 1.361-1.36c.373-.374.984-.374 1.357 0 .375.373.375.984 0 1.357l-1.36 1.36 1.36 1.362c.375.374.375.984 0 1.358-.372.374-.983.374-1.356 0l-1.362-1.362-1.361 1.362c-.374.374-.984.374-1.358 0-.373-.374-.373-.984 0-1.358l1.361-1.361z"
                          transform="translate(1 1)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE ezHljt"
                  color="primary"
                  size="sm"
                >
                  Apps
                </p>
              </div>
            </span>
            <span
              className="PrivateTabIndicator-root-85 PrivateTabIndicator-colorSecondary-87 MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-89 MuiTab-textColorInherit Mui-disabled Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
                        fillRule="nonzero"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Address Book
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-90 MuiTab-textColorInherit"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div>
                custom
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "3",
]
`;

exports[`Storyshots Navigation/Tab Tab Contained Full 1`] = `
Array [
  <div
    className="sc-iBzEeX caauxv"
  >
    <div
      className="MuiTabs-root WithStyles(ForwardRef(Tabs))-root-91"
    >
      <div
        className="MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": null,
            "overflow": "hidden",
          }
        }
      >
        <div
          className="MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-92 MuiTab-textColorInherit MuiTab-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M10.006 3c-2.762 0-5 2.238-5 5s2.238 5 5 5c2.76 0 5-2.238 5-5s-2.24-5-5-5m0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3"
                      />
                      <path
                        className="icon-color"
                        d="M3.427 3.65C1.936 4.535 1 6.18 1 8c0 1.821.937 3.467 2.428 4.35.475.281 1.088.124 1.37-.35.281-.476.124-1.09-.351-1.37C3.565 10.106 3 9.114 3 8s.564-2.106 1.448-2.63c.475-.283.631-.896.35-1.371-.283-.475-.896-.631-1.371-.35z"
                        fillRule="nonzero"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Assets
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-93 MuiTab-textColorInherit MuiTab-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M12.984 11.608l1.302-1.322c.384-.384 1.024-.384 1.408 0 .384.384.384 1.024 0 1.408l-2.966 3.008c-.191.191-.448.298-.704.298-.256 0-.511-.107-.704-.298l-3.03-3.008c-.426-.427-.383-1.152.13-1.515.404-.298.98-.213 1.322.15l1.13 1.108.129.022V1.982c0-.555.447-.982.98-.982.577 0 1.004.448 1.004.982v9.626zM4.984 4.392l1.302 1.322c.384.384 1.024.384 1.408 0 .384-.384.384-1.024 0-1.408L4.728 1.298C4.537 1.107 4.28 1 4.024 1c-.256 0-.511.107-.704.298L.29 4.306c-.426.427-.383 1.152.13 1.515.404.298.98.213 1.322-.15l1.13-1.108.129-.022V14.018c0 .555.447.982.98.982.577 0 1.004-.448 1.004-.982V4.392z"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Transactions
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-94 MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <g
                        className="icon-color"
                      >
                        <path
                          d="M1 0h4c.552 0 1 .448 1 1v4c0 .552-.448 1-1 1H1c-.552 0-1-.448-1-1V1c0-.552.448-1 1-1zm1 2v2h2V2H2zM9 8h4c.552 0 1 .448 1 1v4c0 .552-.448 1-1 1H9c-.552 0-1-.448-1-1V9c0-.552.448-1 1-1zm1 2v2h2v-2h-2zM11 6c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm0-1.9c-.607 0-1.1-.492-1.1-1.1 0-.608.493-1.1 1.1-1.1.608 0 1.1.492 1.1 1.1 0 .608-.492 1.1-1.1 1.1z"
                          fillRule="nonzero"
                          transform="translate(1 1)"
                        />
                        <path
                          d="M1.641 10.999L.281 9.638c-.375-.373-.375-.984 0-1.357.373-.374.984-.374 1.358 0l1.36 1.36 1.361-1.36c.373-.374.984-.374 1.357 0 .375.373.375.984 0 1.357l-1.36 1.36 1.36 1.362c.375.374.375.984 0 1.358-.372.374-.983.374-1.356 0l-1.362-1.362-1.361 1.362c-.374.374-.984.374-1.358 0-.373-.374-.373-.984 0-1.358l1.361-1.361z"
                          transform="translate(1 1)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE ezHljt"
                  color="primary"
                  size="sm"
                >
                  Apps
                </p>
              </div>
            </span>
            <span
              className="PrivateTabIndicator-root-95 PrivateTabIndicator-colorSecondary-97 MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-99 MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div
                className="sc-dIsUp lmaRco"
              >
                <span
                  className="sc-iqAclL hWlKVA"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M0 0H16V16H0z"
                      />
                      <path
                        className="icon-color"
                        d="M2 10V6c-.552 0-1-.448-1-1s.448-1 1-1V3c0-1.105.895-2 2-2h8c1.105 0 2 .895 2 2v10c0 1.105-.895 2-2 2H4c-1.105 0-2-.895-2-2v-1c-.552 0-1-.448-1-1s.448-1 1-1zm2 0c.552 0 1 .448 1 1s-.448 1-1 1v1h8V3H4v1c.552 0 1 .448 1 1s-.448 1-1 1v4z"
                        fillRule="nonzero"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  className="sc-crzoAE hzFUtR"
                  color="text"
                  size="sm"
                >
                  Address Book
                </p>
              </div>
            </span>
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root MuiTab-root WithStyles(ForwardRef(Tab))-root-100 MuiTab-textColorInherit MuiTab-fullWidth"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiTab-wrapper"
            >
              <div>
                custom
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "3",
]
`;
